--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -2,7 +2,12 @@
 # SPDX-License-Identifier: MIT
 
 # Uncomment the following line to enable the Sofle OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
+
+# Uncomment the following line to after compiling both to get left wpm tracking
+CONFIG_ZMK_WPM=y
+#CONFIG_ZMK_WIDGET_WPM_STATUS=y
+
 
 # Uncomment these two lines to add support for encoders
 # CONFIG_EC11=y
