--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -6,7 +6,7 @@ CONFIG_ZMK_DISPLAY=y
 
 # Uncomment the following line to after compiling both to get left wpm tracking
 CONFIG_ZMK_WPM=y
-#CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 
 # Uncomment these two lines to add support for encoders
