--- a/build.yaml
+++ b/build.yaml
@@ -1,54 +1,19 @@
-# This file generates the GitHub Actions matrix.
-# For simple board + shield combinations, add them to the top level board and
-# shield arrays, for more control, add individual board + shield combinations
-# to the `include` property. You can also use the `cmake-args` property to
-# pass flags to the build command and `artifact-name` to assign a name to
-# distinguish build outputs from each other:
-
+# This file generates the GitHub Actions matrix
+# For simple board + shield combinations, add them
+# to the top level board and shield arrays, for more
+# control, add individual board + shield combinations to
+# the `include` property, e.g:
+#
+# board: [ "nice_nano_v2" ]
+# shield: [ "corne_left", "corne_right" ]
+# include:
+#   - board: bdn9_rev2
+#   - board: nice_nano_v2
+#     shield: reviung41
+#
+---
 include:
   - board: nice_nano_v2
-    shield: sofle_left
+    shield: sofle_left #nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: sofle_right
-
-name: Build and Test
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - board: nice_nano_v2
-            shield: sofle_left
-          - board: nice_nano_v2
-            shield: sofle_right
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Setup environment
-      run: |
-        echo "Current directory: $(pwd)"
-        ls -la .
-        sudo apt-get update
-        sudo apt-get install -y cmake ninja-build
-        sudo apt-get install -y zephyr-sdk
-        echo "ZEPHYR_SDK_ROOT=/usr" >> $GITHUB_ENV
-        echo "PATH=${PATH}:${ZEPHYR_SDK_ROOT}/bin" >> $GITHUB_ENV
-    - name: Build
-      env:
-        BOARD: ${{ matrix.board }}
-        SHIELD: ${{ matrix.shield }}
-      run: |
-        # 显示当前目录内容
-        ls -la .
-        # 显示环境变量
-        env
-        # 显示脚本内容
-        cat scripts/build.sh
-        # 构建命令
-        ./scripts/build.sh
+    shield: sofle_right #nice_view_adapter nice_view
