--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -3,11 +3,12 @@
 
 # Uncomment the following line to enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
 # Uncomment the following line to after compiling both to get left wpm tracking
 CONFIG_ZMK_WPM=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
-
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=y
 
 # Uncomment these two lines to add support for encoders
 # CONFIG_EC11=y
